# densparse

./: README.md  pyproject.toml
benchmarks/: matrix_multiply.py
densparse/: __init__.py  composite.py  densparse.py  directional.py  mapping.py  mapping_utils.py  matrix.py
tests/: test_composite.py  test_densparse.py  test_densparse_mapping.py  test_densparse_matrix.py  test_gpu.py  test_mapping_utils.py
